Compiladores/src/y.output
   0  $accept : prog $end

   1  prog : ID BEGIN cuerpo END
   2       | ID cuerpo END
   3       | BEGIN END
   4       | ID BEGIN cuerpo
   5       | ID cuerpo
   6       | BEGIN cuerpo

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentencia_declaracion
  10            | sentencia_ejecucion
  11            | ETIQUETA

  12  sentencia_declaracion : tipo lista_variables ';'
  13                        | tipo lista_variables
  14                        | declaracion_funcion
  15                        | TYPEDEF ID ASIGNACION tipo '{' subrango '}' ';'
  16                        | TYPEDEF ID ASIGNACION tipo '{' subrango ';'
  17                        | TYPEDEF ID ASIGNACION tipo "" subrango '}' ';'
  18                        | TYPEDEF ID ASIGNACION tipo subrango ';'
  19                        | TYPEDEF ID ASIGNACION tipo '{' '}' ';'
  20                        | TYPEDEF ASIGNACION tipo '{' subrango '}' ';'
  21                        | TYPEDEF ID ASIGNACION '{' subrango '}' ';'
  22                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'
  23                        | TYPEDEF STRUCT lista_tipos '{' lista_variables '}' ID ';'
  24                        | TYPEDEF '<' lista_tipos '>' '{' lista_variables '}' ID ';'
  25                        | TYPEDEF STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'

  26  subrango : LONGINT ',' LONGINT
  27           | LONGINT LONGINT
  28           | DOUBLE ',' DOUBLE
  29           | DOUBLE DOUBLE
  30           | HEXA ',' HEXA
  31           | HEXA HEXA

  32  declaracion_funcion : tipo FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  33                      | FUN ID '(' parametro ')' BEGIN cuerpo_funcion END
  34                      | tipo ID '(' parametro ')' BEGIN cuerpo_funcion END
  35                      | tipo FUN '(' parametro ')' BEGIN cuerpo_funcion END
  36                      | tipo FUN ID parametro BEGIN cuerpo_funcion END
  37                      | tipo FUN ID '(' ')' BEGIN cuerpo_funcion END
  38                      | tipo FUN ID '(' parametro ')' cuerpo_funcion END
  39                      | tipo FUN ID '(' parametro ')' BEGIN END

  40  sentencia_ejecucion : asignacion
  41                      | condicion_if
  42                      | sentencia_print
  43                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'
  44                      | REPEAT bloque_sentencia_ejecutable '(' condicion ')' ';'
  45                      | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')'
  46                      | REPEAT bloque_sentencia_ejecutable WHILE '(' ')' ';'
  47                      | GOTO ETIQUETA ';'
  48                      | GOTO ETIQUETA
  49                      | GOTO ';'
  50                      | ETIQUETA ';'

  51  sentencia_print : OUTF '(' CML ')' ';'
  52                  | OUTF '(' expresion ')' ';'
  53                  | OUTF '(' ')' ';'
  54                  | OUTF '(' expresion ')'
  55                  | OUTF '(' CML ')'
  56                  | OUTF CML ';'
  57                  | OUTF expresion ';'

  58  cuerpo_funcion : RET '(' expresion ')' ';'
  59                 | cuerpo RET '(' expresion ')' ';'
  60                 | RET '(' expresion ')'
  61                 | '(' expresion ')' ';'
  62                 | RET expresion ';'
  63                 | RET '(' expresion ';'
  64                 | RET expresion ')' ';'
  65                 | cuerpo RET expresion ';'
  66                 | cuerpo RET '(' expresion ';'
  67                 | cuerpo RET expresion ')' ';'

  68  parametro : tipo ID
  69            | tipo

  70  invocacion_funcion : ID '(' expresion ')'

  71  bloque_sentencia_ejecutable : BEGIN bloque_sentencia_ejecutable sentencia_ejecucion END
  72                              | BEGIN sentencia_ejecucion END

  73  condicion_if : IF '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'
  74               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  75               | IF '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'
  76               | IF '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'
  77               | IF THEN END_IF ';'
  78               | IF THEN bloque_sentencia_ejecutable ';'
  79               | IF THEN bloque_sentencia_ejecutable END_IF
  80               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'
  81               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF
  82               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'
  83               | IF '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'
  84               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'

  85  condicion : '(' expresion comparador expresion ')'
  86            | '(' ')'
  87            | expresion comparador expresion ')'

  88  asignacion : lista_variables ASIGNACION lista_expresiones ';'

  89  expresion : expresion '+' termino
  90            | expresion '-' termino
  91            | expresion '+' '+' termino
  92            | expresion '-' '+' termino
  93            | '+' termino
  94            | expresion '+'
  95            | expresion '-'
  96            | TOD '(' expresion ')'
  97            | TOD '(' ')'
  98            | termino

  99  termino : termino '*' factor
 100          | termino '/' factor
 101          | termino '*' '*' factor
 102          | termino '*' '/' factor
 103          | termino '/' '/' factor
 104          | termino '/' '*' factor
 105          | termino '/'
 106          | termino '*'
 107          | '/' factor
 108          | '*' factor
 109          | factor

 110  factor : invocacion_funcion
 111         | ID
 112         | LONGINT
 113         | '-' LONGINT
 114         | HEXA
 115         | '-' HEXA
 116         | DOUBLE
 117         | '-' DOUBLE

 118  lista_variables : lista_variables ',' ID
 119                  | lista_variables ',' id_compuesta
 120                  | id_compuesta
 121                  | ID

 122  id_compuesta : ID '.' ID

 123  lista_expresiones : lista_expresiones ',' expresion
 124                    | expresion

 125  lista_tipos : lista_tipos ',' tipo
 126              | lista_tipos tipo
 127              | tipo

 128  tipo : LONGINT
 129       | DOUBLE
 130       | ID

 131  comparador : '<'
 132             | '>'
 133             | "MAYOR_IGUAL"
 134             | "MENOR_IGUAL"
 135             | "DISTINTO"

state 0
	$accept : . prog $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	prog  goto 3


state 1
	prog : BEGIN . END  (3)
	prog : BEGIN . cuerpo  (6)

	IF  shift 4
	END  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 15
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 2
	prog : ID . BEGIN cuerpo END  (1)
	prog : ID . cuerpo END  (2)
	prog : ID . BEGIN cuerpo  (4)
	prog : ID . cuerpo  (5)

	IF  shift 4
	BEGIN  shift 26
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 27
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF . '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF . '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'  (76)
	condicion_if : IF . THEN END_IF ';'  (77)
	condicion_if : IF . THEN bloque_sentencia_ejecutable ';'  (78)
	condicion_if : IF . THEN bloque_sentencia_ejecutable END_IF  (79)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF . '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	THEN  shift 28
	'('  shift 29
	.  error


state 5
	prog : BEGIN END .  (3)

	.  reduce 3


state 6
	sentencia_print : OUTF . '(' CML ')' ';'  (51)
	sentencia_print : OUTF . '(' expresion ')' ';'  (52)
	sentencia_print : OUTF . '(' ')' ';'  (53)
	sentencia_print : OUTF . '(' expresion ')'  (54)
	sentencia_print : OUTF . '(' CML ')'  (55)
	sentencia_print : OUTF . CML ';'  (56)
	sentencia_print : OUTF . expresion ';'  (57)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	CML  shift 33
	DOUBLE  shift 34
	TOD  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	'('  shift 40
	.  error

	expresion  goto 41
	invocacion_funcion  goto 42
	termino  goto 43
	factor  goto 44


state 7
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' subrango '}' ';'  (15)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' subrango ';'  (16)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo "" subrango '}' ';'  (17)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo subrango ';'  (18)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '{' '}' ';'  (19)
	sentencia_declaracion : TYPEDEF . ASIGNACION tipo '{' subrango '}' ';'  (20)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION '{' subrango '}' ';'  (21)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (22)
	sentencia_declaracion : TYPEDEF . STRUCT lista_tipos '{' lista_variables '}' ID ';'  (23)
	sentencia_declaracion : TYPEDEF . '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (24)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '{' lista_variables '}' ';'  (25)

	ID  shift 45
	STRUCT  shift 46
	ASIGNACION  shift 47
	'<'  shift 48
	.  error


state 8
	declaracion_funcion : FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (33)

	ID  shift 49
	.  error


state 9
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'  (43)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable '(' condicion ')' ';'  (44)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')'  (45)
	sentencia_ejecucion : REPEAT . bloque_sentencia_ejecutable WHILE '(' ')' ';'  (46)

	BEGIN  shift 50
	.  error

	bloque_sentencia_ejecutable  goto 51


state 10
	sentencia_ejecucion : GOTO . ETIQUETA ';'  (47)
	sentencia_ejecucion : GOTO . ETIQUETA  (48)
	sentencia_ejecucion : GOTO . ';'  (49)

	ETIQUETA  shift 52
	';'  shift 53
	.  error


state 11
	lista_variables : ID .  (121)
	id_compuesta : ID . '.' ID  (122)
	tipo : ID .  (130)

	'.'  shift 54
	FUN  reduce 130
	ID  reduce 130
	ASIGNACION  reduce 121
	','  reduce 121


state 12
	tipo : LONGINT .  (128)

	.  reduce 128


state 13
	tipo : DOUBLE .  (129)

	.  reduce 129


state 14
	sentencia : ETIQUETA .  (11)
	sentencia_ejecucion : ETIQUETA . ';'  (50)

	';'  shift 55
	$end  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	FUN  reduce 11
	RET  reduce 11
	REPEAT  reduce 11
	GOTO  reduce 11
	ID  reduce 11
	LONGINT  reduce 11
	DOUBLE  reduce 11
	ETIQUETA  reduce 11


state 15
	prog : BEGIN cuerpo .  (6)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	$end  reduce 6

	sentencia  goto 56
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 16
	cuerpo : sentencia .  (8)

	.  reduce 8


state 17
	sentencia : sentencia_declaracion .  (9)

	.  reduce 9


state 18
	sentencia : sentencia_ejecucion .  (10)

	.  reduce 10


state 19
	sentencia_declaracion : tipo . lista_variables ';'  (12)
	sentencia_declaracion : tipo . lista_variables  (13)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo_funcion END  (32)
	declaracion_funcion : tipo . ID '(' parametro ')' BEGIN cuerpo_funcion END  (34)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo_funcion END  (35)
	declaracion_funcion : tipo . FUN ID parametro BEGIN cuerpo_funcion END  (36)
	declaracion_funcion : tipo . FUN ID '(' ')' BEGIN cuerpo_funcion END  (37)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' cuerpo_funcion END  (38)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN END  (39)

	FUN  shift 57
	ID  shift 58
	.  error

	lista_variables  goto 59
	id_compuesta  goto 25


state 20
	asignacion : lista_variables . ASIGNACION lista_expresiones ';'  (88)
	lista_variables : lista_variables . ',' ID  (118)
	lista_variables : lista_variables . ',' id_compuesta  (119)

	ASIGNACION  shift 60
	','  shift 61
	.  error


state 21
	sentencia_declaracion : declaracion_funcion .  (14)

	.  reduce 14


state 22
	sentencia_ejecucion : asignacion .  (40)

	.  reduce 40


state 23
	sentencia_ejecucion : condicion_if .  (41)

	.  reduce 41


state 24
	sentencia_ejecucion : sentencia_print .  (42)

	.  reduce 42


state 25
	lista_variables : id_compuesta .  (120)

	.  reduce 120


state 26
	prog : ID BEGIN . cuerpo END  (1)
	prog : ID BEGIN . cuerpo  (4)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	.  error

	cuerpo  goto 62
	sentencia  goto 16
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 27
	prog : ID cuerpo . END  (2)
	prog : ID cuerpo .  (5)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 63
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	$end  reduce 5

	sentencia  goto 56
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 28
	condicion_if : IF THEN . END_IF ';'  (77)
	condicion_if : IF THEN . bloque_sentencia_ejecutable ';'  (78)
	condicion_if : IF THEN . bloque_sentencia_ejecutable END_IF  (79)

	BEGIN  shift 50
	END_IF  shift 64
	.  error

	bloque_sentencia_ejecutable  goto 65


state 29
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF '(' . condicion ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF '(' . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (76)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF '(' . condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	TOD  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	'('  shift 66
	')'  shift 67
	.  error

	condicion  goto 68
	expresion  goto 69
	invocacion_funcion  goto 42
	termino  goto 43
	factor  goto 44


state 30
	invocacion_funcion : ID . '(' expresion ')'  (70)
	factor : ID .  (111)

	'('  shift 70
	'+'  reduce 111
	'-'  reduce 111
	'*'  reduce 111
	'/'  reduce 111
	';'  reduce 111
	'<'  reduce 111
	'>'  reduce 111
	','  reduce 111
	')'  reduce 111
	"MAYOR_IGUAL"  reduce 111
	"MENOR_IGUAL"  reduce 111
	"DISTINTO"  reduce 111


state 31
	factor : LONGINT .  (112)

	.  reduce 112


state 32
	factor : HEXA .  (114)

	.  reduce 114


state 33
	sentencia_print : OUTF CML . ';'  (56)

	';'  shift 71
	.  error


state 34
	factor : DOUBLE .  (116)

	.  reduce 116


state 35
	expresion : TOD . '(' expresion ')'  (96)
	expresion : TOD . '(' ')'  (97)

	'('  shift 72
	.  error


state 36
	expresion : '+' . termino  (93)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  error

	invocacion_funcion  goto 42
	termino  goto 73
	factor  goto 44


state 37
	factor : '-' . LONGINT  (113)
	factor : '-' . HEXA  (115)
	factor : '-' . DOUBLE  (117)

	LONGINT  shift 74
	HEXA  shift 75
	DOUBLE  shift 76
	.  error


state 38
	termino : '*' . factor  (108)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	'-'  shift 37
	.  error

	invocacion_funcion  goto 42
	factor  goto 77


state 39
	termino : '/' . factor  (107)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	'-'  shift 37
	.  error

	invocacion_funcion  goto 42
	factor  goto 78


state 40
	sentencia_print : OUTF '(' . CML ')' ';'  (51)
	sentencia_print : OUTF '(' . expresion ')' ';'  (52)
	sentencia_print : OUTF '(' . ')' ';'  (53)
	sentencia_print : OUTF '(' . expresion ')'  (54)
	sentencia_print : OUTF '(' . CML ')'  (55)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	CML  shift 79
	DOUBLE  shift 34
	TOD  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	')'  shift 80
	.  error

	expresion  goto 81
	invocacion_funcion  goto 42
	termino  goto 43
	factor  goto 44


state 41
	sentencia_print : OUTF expresion . ';'  (57)
	expresion : expresion . '+' termino  (89)
	expresion : expresion . '-' termino  (90)
	expresion : expresion . '+' '+' termino  (91)
	expresion : expresion . '-' '+' termino  (92)
	expresion : expresion . '+'  (94)
	expresion : expresion . '-'  (95)

	'+'  shift 82
	'-'  shift 83
	';'  shift 84
	.  error


state 42
	factor : invocacion_funcion .  (110)

	.  reduce 110


state 43
	expresion : termino .  (98)
	termino : termino . '*' factor  (99)
	termino : termino . '/' factor  (100)
	termino : termino . '*' '*' factor  (101)
	termino : termino . '*' '/' factor  (102)
	termino : termino . '/' '/' factor  (103)
	termino : termino . '/' '*' factor  (104)
	termino : termino . '/'  (105)
	termino : termino . '*'  (106)

	'*'  shift 85
	'/'  shift 86
	'+'  reduce 98
	'-'  reduce 98
	';'  reduce 98
	'<'  reduce 98
	'>'  reduce 98
	','  reduce 98
	')'  reduce 98
	"MAYOR_IGUAL"  reduce 98
	"MENOR_IGUAL"  reduce 98
	"DISTINTO"  reduce 98


state 44
	termino : factor .  (109)

	.  reduce 109


state 45
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' subrango '}' ';'  (15)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' subrango ';'  (16)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo "" subrango '}' ';'  (17)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo subrango ';'  (18)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '{' '}' ';'  (19)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION '{' subrango '}' ';'  (21)

	ASIGNACION  shift 87
	.  error


state 46
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ID ';'  (22)
	sentencia_declaracion : TYPEDEF STRUCT . lista_tipos '{' lista_variables '}' ID ';'  (23)
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '{' lista_variables '}' ';'  (25)

	ID  shift 88
	LONGINT  shift 12
	DOUBLE  shift 13
	'<'  shift 89
	.  error

	tipo  goto 90
	lista_tipos  goto 91


state 47
	sentencia_declaracion : TYPEDEF ASIGNACION . tipo '{' subrango '}' ';'  (20)

	ID  shift 88
	LONGINT  shift 12
	DOUBLE  shift 13
	.  error

	tipo  goto 92


state 48
	sentencia_declaracion : TYPEDEF '<' . lista_tipos '>' '{' lista_variables '}' ID ';'  (24)

	ID  shift 88
	LONGINT  shift 12
	DOUBLE  shift 13
	.  error

	tipo  goto 90
	lista_tipos  goto 93


state 49
	declaracion_funcion : FUN ID . '(' parametro ')' BEGIN cuerpo_funcion END  (33)

	'('  shift 94
	.  error


state 50
	bloque_sentencia_ejecutable : BEGIN . bloque_sentencia_ejecutable sentencia_ejecucion END  (71)
	bloque_sentencia_ejecutable : BEGIN . sentencia_ejecucion END  (72)

	IF  shift 4
	BEGIN  shift 50
	OUTF  shift 6
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 95
	ETIQUETA  shift 96
	.  error

	sentencia_ejecucion  goto 97
	lista_variables  goto 20
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	bloque_sentencia_ejecutable  goto 98
	id_compuesta  goto 25


state 51
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')' ';'  (43)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . '(' condicion ')' ';'  (44)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' condicion ')'  (45)
	sentencia_ejecucion : REPEAT bloque_sentencia_ejecutable . WHILE '(' ')' ';'  (46)

	WHILE  shift 99
	'('  shift 100
	.  error


state 52
	sentencia_ejecucion : GOTO ETIQUETA . ';'  (47)
	sentencia_ejecucion : GOTO ETIQUETA .  (48)

	';'  shift 101
	$end  reduce 48
	IF  reduce 48
	END  reduce 48
	OUTF  reduce 48
	TYPEDEF  reduce 48
	FUN  reduce 48
	RET  reduce 48
	REPEAT  reduce 48
	GOTO  reduce 48
	ID  reduce 48
	LONGINT  reduce 48
	DOUBLE  reduce 48
	ETIQUETA  reduce 48


state 53
	sentencia_ejecucion : GOTO ';' .  (49)

	.  reduce 49


state 54
	id_compuesta : ID '.' . ID  (122)

	ID  shift 102
	.  error


state 55
	sentencia_ejecucion : ETIQUETA ';' .  (50)

	.  reduce 50


state 56
	cuerpo : cuerpo sentencia .  (7)

	.  reduce 7


state 57
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN cuerpo_funcion END  (32)
	declaracion_funcion : tipo FUN . '(' parametro ')' BEGIN cuerpo_funcion END  (35)
	declaracion_funcion : tipo FUN . ID parametro BEGIN cuerpo_funcion END  (36)
	declaracion_funcion : tipo FUN . ID '(' ')' BEGIN cuerpo_funcion END  (37)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' cuerpo_funcion END  (38)
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN END  (39)

	ID  shift 103
	'('  shift 104
	.  error


state 58
	declaracion_funcion : tipo ID . '(' parametro ')' BEGIN cuerpo_funcion END  (34)
	lista_variables : ID .  (121)
	id_compuesta : ID . '.' ID  (122)

	'.'  shift 54
	'('  shift 105
	$end  reduce 121
	IF  reduce 121
	END  reduce 121
	OUTF  reduce 121
	TYPEDEF  reduce 121
	FUN  reduce 121
	RET  reduce 121
	REPEAT  reduce 121
	GOTO  reduce 121
	ID  reduce 121
	LONGINT  reduce 121
	DOUBLE  reduce 121
	ETIQUETA  reduce 121
	';'  reduce 121
	','  reduce 121


state 59
	sentencia_declaracion : tipo lista_variables . ';'  (12)
	sentencia_declaracion : tipo lista_variables .  (13)
	lista_variables : lista_variables . ',' ID  (118)
	lista_variables : lista_variables . ',' id_compuesta  (119)

	';'  shift 106
	','  shift 61
	$end  reduce 13
	IF  reduce 13
	END  reduce 13
	OUTF  reduce 13
	TYPEDEF  reduce 13
	FUN  reduce 13
	RET  reduce 13
	REPEAT  reduce 13
	GOTO  reduce 13
	ID  reduce 13
	LONGINT  reduce 13
	DOUBLE  reduce 13
	ETIQUETA  reduce 13


state 60
	asignacion : lista_variables ASIGNACION . lista_expresiones ';'  (88)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	TOD  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	.  error

	expresion  goto 107
	invocacion_funcion  goto 42
	lista_expresiones  goto 108
	termino  goto 43
	factor  goto 44


state 61
	lista_variables : lista_variables ',' . ID  (118)
	lista_variables : lista_variables ',' . id_compuesta  (119)

	ID  shift 109
	.  error

	id_compuesta  goto 110


state 62
	prog : ID BEGIN cuerpo . END  (1)
	prog : ID BEGIN cuerpo .  (4)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 111
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	DOUBLE  shift 13
	ETIQUETA  shift 14
	$end  reduce 4

	sentencia  goto 56
	sentencia_declaracion  goto 17
	sentencia_ejecucion  goto 18
	tipo  goto 19
	lista_variables  goto 20
	declaracion_funcion  goto 21
	asignacion  goto 22
	condicion_if  goto 23
	sentencia_print  goto 24
	id_compuesta  goto 25


state 63
	prog : ID cuerpo END .  (2)

	.  reduce 2


state 64
	condicion_if : IF THEN END_IF . ';'  (77)

	';'  shift 112
	.  error


state 65
	condicion_if : IF THEN bloque_sentencia_ejecutable . ';'  (78)
	condicion_if : IF THEN bloque_sentencia_ejecutable . END_IF  (79)

	END_IF  shift 113
	';'  shift 114
	.  error


state 66
	condicion : '(' . expresion comparador expresion ')'  (85)
	condicion : '(' . ')'  (86)

	ID  shift 30
	LONGINT  shift 31
	HEXA  shift 32
	DOUBLE  shift 34
	TOD  shift 35
	'+'  shift 36
	'-'  shift 37
	'*'  shift 38
	'/'  shift 39
	')'  shift 115
	.  error

	expresion  goto 116
	invocacion_funcion  goto 42
	termino  goto 43
	factor  goto 44


state 67
	condicion_if : IF '(' ')' . THEN bloque_sentencia_ejecutable END_IF ';'  (76)

	THEN  shift 117
	.  error


state 68
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF '(' condicion . ')' bloque_sentencia_ejecutable END_IF ';'  (75)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (80)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (81)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (82)
	condicion_if : IF '(' condicion . ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (83)
	condicion_if : IF '(' condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (84)

	')'  shift 118
	.  error

